VERSION 0.9.8
-------------
Release Date: ?

 - added class Peak_Controller_Action_Json
 - fixed group by unquoted identifier of method _getData() in Peak_Model_Pagination
 - fixed order by unquoted identifier of method _getData() in Peak_Model_Pagination
 - added method quoteIdentifiers() in Peak_Model_Zendatable
 - fixed variable name problem in method translate() of class Peak_Lang
 - fixed a bug in method exists() of class Peak_Model_Zendatable that occur when field key name is also a reserved word.
 - improved method addRegex() of Peak_Router by supporting quick pattern {param_name}:validator in regex. Validator are:
   :any, :negnum, :posnum, :negfloat, :posfloat, :float, :permalink, :alphanum, :alpha, :year, :month, :day. Also, those
   quick validators are searched/replaced by default, but can be turn off with the third param of addRegex()
 - added method getLoadedFiles() to Peak_Lang. Also, when loading file, if lang abbreviation is missing, an exception is thrown.
 - added 3 new methods in class Peak_Helpers : addPath(), setPaths(), getPaths().
 - added method helperObject() to Peak_View. This create/return instance of Peak_View_Helpers.
 - added a fix to Peak_View_Helper_Debugbar to prevent showing the bar on production env
 - added magic method __call() to Peak_Model_Zendatable and get rid of all shortcut methods
 - added a basic but usefull class model Peak_Model_ActiveRecord based on ActiveRecord pattern
 - fixed Peak_Config methods to use array_key_exists() instead of isset()
 - fixed Peak_View_Helpers by preventing in jection of view object if this helper extends Peak_Config class
 - rewrited a good portion of class Peak_Lang. It's now more granular, supports multiple translations files and more 
   independent from others Peak components
 - modified method setColumns() of Peak_View_Helper_Grid for trimming the keys of columns
 - added a param to method getAction() of class Peak_Controller_Action to return action without the prefix