@@ -10,6 +10,8 @@ front.error_controller           = "pkerror"
 view.engine    = "Layouts"
 view.useLayout = "homepage"
 
+router.addregex[] = "custom-route-example | index/index"
+
 [development]
 
 [testing]
